feat: Initial commit - APi de clima SpringBoot